# estrutura_projeto_de_dados

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: api.md  index.md
test/: test_pipeline.py
